--- a/config.yaml
+++ b/config.yaml
@@ -237,7 +237,7 @@ params:
     index: false
     items:
       
-      - title: "Ingeniero en Mecatrónica"
+      - title: "Ingeniería en Mecatrónica"
         school:
           name: "Escuela Superior Politécnica del Litoral"
           url: "https://www.espol.edu.ec/es"
